--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="Keywords"content="learning JavaScript, Bulding a Form, CS20">
     <meta name="viewport"content="width=device-width, initial-scale=1.0">
   </head>
-
+  <body>
 <header><h1 style="background-color:limegreen;">JavaScript Assignments</h1></header>
 <nav>
 <ol>
-  <body><button type="button" onclick="document.getElementById('Max').innerHTML">
-    Max of Two Numbers.
+  <button type="button" onclick="document.getElementById('Max').innerHTML">
+  color
     <p id="Max"> </p>
   <li> <a href="childPage/Max of Two Numbers.html" target="_blank">Max of Two Numbers
     </button>
