--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <form action="childPage/Max of Two Numbers.html" method="get" target="_blank">
- <button type="button" formmethod="post">Max of Two Numbers</button>
+ <button type="button" formmethod="get">Max of Two Numbers</button>
 </form>
     <header><h1 style="background-color:limegreen;">JavaScript Assignments</h1></header>
 <nav>
