--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport"content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <form action="/JavaScript-github.io" method="get" target="_blank">
+    <form action="//rasoul0.github.io/JavaScript-github.io/" method="get" target="_blank">
  <button type="button" formmethod="get">Max of Two Numbers</button>
 </form>
     <header><h1 style="background-color:limegreen;">JavaScript Assignments</h1></header>
