--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <meta name="viewport"content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <form action="/Max of Two Numbers.html" method="get" target="_blank">
- <button type="button" formmethod="get">Max of Two Numbers</button>
-</form>
+
     <header><h1 style="background-color:limegreen;">JavaScript Assignments</h1></header>
 <nav>
 <ol>
+  <form action="/Max of Two Numbers.html" method="get">
+    <button type="button" formaction="/Max of Two Number.html"></button>
   <li> <a href="childPage/Max of Two Numbers.html" target="_blank">Max of Two Numbers
   <li> <a href="childPage/Landscape or Portrait.html" target="_blank">Landscape or Portrait
   <li> <a href="childPage/Modules Assignment.html" target="_blank">Modules Assignment
