--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   </head>
   <body>
 
-    <header><h1 style="background-color:#000000;">JavaScript Assignments</h1></header>
+    <header><h1 style="background-color:#000000;"> color:white; JavaScript Assignments</h1>
+
+
+    </header>
 <nav>
 <ol>
   <form action="/Max of Two Numbers.html" method="get">
