--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="Keywords"content="learning JavaScript, Bulding a Form, CS20">
     <meta name="viewport"content="width=device-width, initial-scale=1.0">
   <body>
-    <header><h1 style="background-color:#000000;">JavaScript Assignments</h1></head>
-    color: white;
+    <header><h1 style="background-color:#000000;">JavaScript Assignments</h1>
 
     </header>
+    </head>
 <nav>
 <ol>
   <form action="/Max of Two Numbers.html" method="get">
