--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="Keywords"content="learning JavaScript, Bulding a Form, CS20">
     <meta name="viewport"content="width=device-width, initial-scale=1.0">
   <body>
-    <header><h1 style="background-color:#000000;">JavaScript Assignments</h1>
+    <header><h1>JavaScript Assignments</h1>
 
     </header>
     </head>
