--- a/childPage/Max of Two Numbers.html
+++ b/childPage/Max of Two Numbers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>First Assignment</title>
-  <meta name="author" content="Mark Mercer">
+  <meta name="author" content="Rasoul Edris">
   <meta name="description" content="Comparing two number, find the larger">
   <meta name="keywords" content="Inequality, comparisons">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -72,6 +72,6 @@
         </a>
       </em>
     </p>
-    &copy Mark Mercer, powered by MercersKitchen in GitHub
+    &copy Rasoul Edris, powered by Rasoul0 in GitHub
   </footer>
 </html>
