--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -9,7 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <header><h1>Landscape or Portrait</h1></header>
+    <header>
+<text-align: center; >  
+ <h1>Landscape or Portrait</h1>
+
+    </header>
     <nav>
 
     </nav>
