--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -10,7 +10,11 @@
   </head>
   <body>
     <style>
+      body{
+      background-color: purple;
 
+
+      }
      h1{
   text-align: center;
      }
