--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -12,10 +12,9 @@
     <style>
       body{
       background-color: purple;
-
-
-      }
+}
      h1{
+       background-color: yellow;
   text-align: center;
      }
 
