--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -14,8 +14,10 @@
       background-color: purple;
 }
      h1{
-       background-color: yellow;
   text-align: center;
+     }
+     head{
+       background-color: yellow;
      }
 
     </style>
